--- a/contents/errors/error_404.html
+++ b/contents/errors/error_404.html
@@ -11,4 +11,6 @@ published: 1
 Unfortunately, the page you have requested does not exist.
 
 Please ensure that the URL is correct. If it should work, feel free to
-[contact me](/contact) to have things patched up, or to get more information.
+<a href="/contact/">contact me</a> to have things patched up, or to get more
+information.
+
