Rename from tehpotatoking.com to nitelite.io

--- a/contents/privacy.html
+++ b/contents/privacy.html
@@ -8,16 +8,16 @@ published: 1
   <h2 class="title"><a href="/privacy/" class="title-link">Privacy Policy</a></h2>
 </header>
 
-This privacy policy covers how tehpotatoking.com will treat all information
+This privacy policy covers how niteLite.io will treat all information
 received from visitors. The policy is really simple.
 
 The only personal information this site may have on you is anything you
 voluntarily disclose.
 
-tehpotatoking.com does record information from your browser.  This data includes
+niteLite.io does record information from your browser.  This data includes
 cookie information, IP address, and the page requested. This information is
 used to track anonymous analytics information through my own systems.
-tehpotatoking.com also uses Google Analytics to generate anonymous statistics of
+niteLite.io also uses Google Analytics to generate anonymous statistics of
 visits, clicks, etc.
 
 This information is kept private. It is not shared with anyone.
