--- a/contents/license.html
+++ b/contents/license.html
@@ -8,23 +8,23 @@ published: 1
   <h2 class="title"><a href="/license/" class="title-link">License</a></h2>
 </header>
 
-tehpotatoking.com source code is Copyright (c) 2014 tehPotatoKing.com, licensed
+niteLite.io source code is Copyright (c) 2014 niteLite.io, licensed
 under the GNU GPL v2.0.
 
-tehpotatoking.com copy is Copyright (c) 2014 tehPotatoKing.com. All rights
+niteLite.io copy is Copyright (c) 2014 niteLite.io. All rights
 reserved.
 
-tehpotatoking.com copy "code snippets" in the contents/ directory and any
-subdirectories thereof are Copyright (c) 2014 tehPotatoKing.com, licensed
+niteLite.io copy "code snippets" in the contents/ directory and any
+subdirectories thereof are Copyright (c) 2014 niteLite.io, licensed
 under the MIT license.
 
-tehpotatoking.com images and any media (defined as binary files that are not
-software dependencies) are Copyright (c) 2014 tehPotatoKing.com, licensed
+niteLite.io images and any media (defined as binary files that are not
+software dependencies) are Copyright (c) 2014 niteLite.io, licensed
 under Creative Commons: BY-SA Attribution 3.0 unless otherwise noted.
 http://creativecommons.org/licenses/by-sa/3.0/
 
 "bg-skulls.png" is Copyright (c) by Atle Mo
 (subtlepatterns.com), licensed under Creative Commons: Attribution-ShareAlike 3.0.
 http://creativecommons.org/licenses/by-sa/3.0/
-Modified by tehPotatoKing
+Modified by niteLite
 
