--- a/contents/license.html
+++ b/contents/license.html
@@ -8,23 +8,34 @@ published: 1
   <h2 class="title"><a href="/license/" class="title-link">License</a></h2>
 </header>
 
+<p>
 niteLite.io source code is Copyright (c) 2014 niteLite.io, licensed
 under the GNU GPL v2.0.
+</p>
 
+<p>
 niteLite.io copy is Copyright (c) 2014 niteLite.io. All rights
 reserved.
+</p>
 
+<p>
 niteLite.io copy "code snippets" in the contents/ directory and any
 subdirectories thereof are Copyright (c) 2014 niteLite.io, licensed
 under the MIT license.
+</p>
 
+<p>
 niteLite.io images and any media (defined as binary files that are not
 software dependencies) are Copyright (c) 2014 niteLite.io, licensed
-under Creative Commons: BY-SA Attribution 3.0 unless otherwise noted.
+under Creative Commons: BY-SA Attribution 3.0 unless otherwise noted.<br/>
 http://creativecommons.org/licenses/by-sa/3.0/
+</p>
 
+<p>
 "bg-skulls.png" is Copyright (c) by Atle Mo
-(subtlepatterns.com), licensed under Creative Commons: Attribution-ShareAlike 3.0.
-http://creativecommons.org/licenses/by-sa/3.0/
+(subtlepatterns.com), licensed under Creative Commons: Attribution-ShareAlike
+3.0.<br />
+http://creativecommons.org/licenses/by-sa/3.0/<br/>
 Modified by niteLite
+</p>
 
