Implement metadata fixes and updates

--- a/nitelite.io-web/contents/notebooks/2017-09-14-my-questions-on-how-music-relates-to-story.html
+++ b/nitelite.io-web/contents/notebooks/2017-09-14-my-questions-on-how-music-relates-to-story.html
@@ -49,5 +49,4 @@ forgettable? Do the words in music really matter? Does music tell story?
 
 <p>
 These are some of the questions I have about music. This is something I will
-explore as best I can.
-</p>
+explore as best I can.</p>
