--- a/nitelite.io-web/contents/notebooks/2018-02-09-on-the-dynamics-of-propaganda-in-art.html
+++ b/nitelite.io-web/contents/notebooks/2018-02-09-on-the-dynamics-of-propaganda-in-art.html
@@ -38,7 +38,7 @@ where the core is this a priori thoughtform.
 <div class="flex-video widescreen"><iframe width="560" height="315" src="//www.youtube.com/embed/KsjzEUwfKKA?start=484" frameborder="0" allowfullscreen></iframe></div>
 </p>
 
-<div class="center">
+<div class="org-center">
 <p>
 <i>A discussion of propaganda in visual arts.</i>
 </p>
@@ -136,5 +136,4 @@ term in this post), but the canvas and the production is constrained to fit in
 the vibe of the story being told in the film. However, just like how photography
 leverages its canvas of angles, color, contrast, etc., to manifest its own
 forms, film scoring can capture chaos as well. It's just potentially a different
-approach to music production than say, composition.
-</p>
+approach to music production than say, composition.</p>
